--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A database of g90 glory",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start": "?????????"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.4.3"
   }
